--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <title>Ad Tycoon – Points Edition</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    @font-face {
+      font-family: "3Dumb";
+      src: url("3Dumb.ttf") format("truetype");
+      font-weight: normal;
+      font-style: normal;
+    }
+
     * {
       box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-family: "3Dumb", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
+
     body {
       margin: 0;
       min-height: 100vh;
@@ -443,7 +451,6 @@
     let progress = 0;
     let timer = null;
 
-    // Helpers
     function getBasePointsPerAd() {
       return BASE_POINTS_PER_AD + betterDealsLevel * 5;
     }
@@ -453,7 +460,6 @@
     }
 
     function getBonusChance() {
-      // 0.05 = 5% per level
       return Math.min(1, bonusLevel * 0.05);
     }
 
@@ -539,7 +545,6 @@
       let reward = getPointsPerAd();
       let message = "";
 
-      // Viral bonus chance
       const chance = getBonusChance();
       if (chance > 0 && Math.random() < chance) {
         reward *= 2;
@@ -623,14 +628,12 @@
       }
     }
 
-    // Event listeners
     watchButton.addEventListener("click", startAd);
     betterDealsBtn.addEventListener("click", buyBetterDeals);
     multiplierBtn.addEventListener("click", buyMultiplier);
     bonusBtn.addEventListener("click", buyBonus);
     contractsBtn.addEventListener("click", buyContracts);
 
-    // Start passive income loop (1s)
     setInterval(passiveTick, 1000);
 
     updateUI();
